@@ -26,6 +26,7 @@ cupt (0.3.2) UNRELEASED; urgency=low
         parameter.
     - Core:
       - New free subroutine 'are_hash_sums_present'.
+      - New free subroutine 'compare_hash_sums'.
 
  -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 07 Jul 2009 19:20:32 +0300
 
